of which the natural block list is generated for files that 
have lines exceeding 127 bytes.


Tue Jan  4 23:03:29 UTC 2005	20040104	Kyle Sallee
Made sorting faster.
Eliminated a bug in sdelta.c where I placed a 
break when I really wanted a continue command.


Tue Jan 11 21:45:36 UTC 2005			Kyle Sallee
Using a new input.c to better support mmap reading of files
and anonymous mmap on stdin on Linux, FreeBSD, and Solaris POSIX.
mmap of files instead of reading them into swap provides better
performance and less swapping when making sdelta patches of very
large files like the + 500M Sorcerer Install/Rescue ISO9660.

Introduced POSIX threading to sdelta generation that should
improve speed of sdelta generation on SMP boxes with adequate 
RAM to avoid swapping or re-reading of mmaped files.


Sun Jan 16 22:11:32 UTC 2005	20040117	Kyle Sallee
Reviewed source to remove some insignifigantly buggy code.
Modified the way tag values are calculated to require the
crc for the desired block and following block to create 
greater entropy in the ordered block list which yields
faster searches.


Wed Jan 26 10:54:30 UTC 2005			Kyle Sallee
Modified code to use 64 bit integers where 
applicable instead of 32 bit integers.
This change causes minor slow down on 32 bit architecture
for occasional unnecessary 32 bit memory access.
However it may be faster on 64 bit architecture
where it can fetch 64 bits at a time and save 
on an additional indexing.


Fri Jan 28 21:52:11 UTC 2005			Kyle Sallee
Thanks goes to Pavel Gorshkov <svinn@gmx.net> switching SHA1
generation from mhash to openssl since openssl is faster.


Fri Jan 28 21:52:11 UTC 2005	20050129	Kyle Sallee
Added sd BASH 3.0 script to wrap invocation of sdelta.
sd provides transparent compression and decompression 
of source tarballs and sdelta patches.
This aught to make sdelta easer for POSIX novices.


Sun Jan 30 23:48:42 UTC 2005	20050130	Kyle Sallee
Fixed typos in Makefile reported by Ady Deac <adydeac@yahoo.com>