@@ -18,8 +18,9 @@ bsd:  *.c *.h
 	$(CC) $(CFLAGS) -DUSE_LIBMD *.c $(LDFLAGS) -pthread -ldlmalloc /usr/lib/libmd.a -o sdelta
 
 install: sdelta
-	mkdir   -m 0755  -p              $(PREFIX)/bin
-	install -m 0755  sdelta  sd      $(PREFIX)/bin
-	mkdir   -m 0755  -p              $(PREFIX)/share/sdelta
-	install -m 0644  LICENSE  USAGE  $(PREFIX)/share/sdelta
-	install -m 0644  sdelta.magic    $(PREFIX)/share/sdelta/magic
+	mkdir   -m 0755  -p                     $(PREFIX)/bin
+	install -m 0755  sdelta  sd  sdreq      $(PREFIX)/bin
+	mkdir   -m 0755  -p                     $(PREFIX)/share/sdelta
+	install -m 0644  LICENSE  USAGE         $(PREFIX)/share/sdelta
+	install -m 0644  README   sdreq_README  $(PREFIX)/share/sdelta
+	install -m 0644  sdelta.magic           $(PREFIX)/share/sdelta/magic
