@@ -130,3 +130,15 @@ This aught to make sdelta easer for POSIX novices.
 
 Sun Jan 30 23:48:42 UTC 2005	20050130	Kyle Sallee
 Fixed typos in Makefile reported by Ady Deac <adydeac@yahoo.com>
+
+
+Tue Feb 22 02:25:32 UTC 2005	20050222	Kyle Sallee
+Initial release and testing of sdreq client for 
+selecting sdelta patches to upgrade wanted sources,
+make the request for generation of patches,
+download the patches,
+and apply the patches to generate the new source.
+Email notification works however uploading
+patch files via ftp is not yet tested.
+The service may or may not be available until sdreq
+and the server side code is completely debugged.
